--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
 
+    <div id="container">
+        <h1>My Checklist</h1>
+        <input type="text">
+
+    </div>
+
+<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
