--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <h1>My Checklist</h1>
         <input type="text">
 
+        <ul>
+            <li><span>x</span> Give God Honor!</li>
+            <li><span>x</span> Read My Bible</li>
+            <li><span>x</span> Kiss My Wife</li>
+            <li><span>x</span> Pray For My Family</li>
+        </ul>
+
     </div>
 
 <script type="text/javascript" src="assets/js/script.js"></script>
