Styles addes and font awesome link and animation on ul li

--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <title></title>
     <link rel="stylesheet" href="assets/css/styles.css" media="screen" title="no title" charset="utf-8">
     <script type="text/javascript" src="assets/js/lib/jquery-3.1.0.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
 
 </head>
 <body>
 
     <div id="container">
-        <h1>My Checklist</h1>
-        <input type="text">
+        <h1>My Checklist <i class="fa fa-pencil-square-o" aria-hidden="true"></i></h1>
+        <input type="text" placeholder="Add New Item List">
 
         <ul>
-            <li><span>x</span> Give God Honor!</li>
-            <li><span>x</span> Read My Bible</li>
-            <li><span>x</span> Kiss My Wife</li>
-            <li><span>x</span> Pray For My Family</li>
+            <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Give God Honor!</li>
+            <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Read My Bible</li>
+            <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Kiss My Wife</li>
+            <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Pray For My Family</li>
         </ul>
 
     </div>
